--- a/Modelbouwer/Resources/Styles/ComboBox.xaml
+++ b/Modelbouwer/Resources/Styles/ComboBox.xaml
@@ -25,7 +25,6 @@
 		<Setter Property="HorizontalContentAlignment" Value="Left" />
 		<Setter Property="HorizontalContentAlignment" Value="Left" />
 		<Setter Property="IsTextSearchEnabled" Value="True" />
-		<Setter Property="Padding" Value="2" />
 		<Setter Property="Padding" Value="5" />
 		<Setter Property="Template">
 			<Setter.Value>
@@ -39,13 +38,13 @@
 							CornerRadius="2"
 							>
 							<Grid>
-								<!--  Tekst van de geselecteerde item  -->
+								<!--  Text of the selected item  -->
 								<ContentPresenter
 									Margin="5,0,0,0"
 									HorizontalAlignment="Left"
 									VerticalAlignment="Center"
 									/>
-								<!--  Pijl in de rechterhoek  -->
+								<!--  Down arro  -->
 								<Path
 									x:Name="Arrow"
 									Width="10"
@@ -58,38 +57,7 @@
 									/>
 							</Grid>
 						</Border>
-						<!--  Popup van de ComboBox  -->
-						<Popup
-							x:Name="PART_Popup"
-							AllowsTransparency="True"
-							IsOpen="{TemplateBinding IsDropDownOpen}"
-							Placement="Bottom"
-							>
-							<Grid>
-								<Border
-									x:Name="DropDownBorder"
-									Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
-									BorderBrush="{TemplateBinding BorderBrush}"
-									BorderThickness="1"
-									>
-									<ScrollViewer x:Name="DropDownScrollViewer">
-										<StackPanel IsItemsHost="True" />
-									</ScrollViewer>
-								</Border>
-							</Grid>
-						</Popup>
 					</Grid>
-					<ControlTemplate.Triggers>
-						<!--  Verander de pijl wanneer de ComboBox wordt geopend  -->
-						<Trigger Property="IsDropDownOpen" Value="True">
-							<Setter TargetName="Arrow" Property="Data" Value="M 0 3 L 10 8 L 5 3 Z" />
-						</Trigger>
-						<!--  Verander de stijl wanneer de ComboBox niet is ingeschakeld  -->
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter TargetName="Arrow" Property="Fill" Value="Gray" />
-							<Setter TargetName="Border" Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" />
-						</Trigger>
-					</ControlTemplate.Triggers>
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
@@ -98,5 +66,63 @@
 		<Setter Property="VerticalContentAlignment" Value="Center" />
 	</Style>
 	<!--#endregion-->
+
+	<Style x:Key="RoundedComboBox" TargetType="ComboBox">
+		<!--  Afgeronde hoeken en standaard stijlen voor de ComboBox  -->
+		<Setter Property="Background" Value="{DynamicResource ComboBox.Background}" />
+		<Setter Property="BorderBrush" Value="{DynamicResource ComboBox.Border}" />
+		<Setter Property="BorderThickness" Value="1" />
+		<Setter Property="Height" Value="23" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="Padding" Value="5" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="ComboBox">
+					<Grid>
+						<Border
+							x:Name="Border"
+							Background="{TemplateBinding Background}"
+							BorderBrush="{TemplateBinding BorderBrush}"
+							BorderThickness="1"
+							CornerRadius="5"
+							>
+							<!--  Afgeronde hoeken  -->
+							<Grid>
+								<!--  Tekst van de geselecteerde item  -->
+								<ContentPresenter
+									Margin="5,0,0,0"
+									HorizontalAlignment="Left"
+									VerticalAlignment="Center"
+									/>
+								<!--  Aangepaste pijl in de rechterhoek  -->
+								<Path
+									x:Name="Arrow"
+									Width="10"
+									Height="10"
+									Margin="0,0,5,0"
+									HorizontalAlignment="Right"
+									VerticalAlignment="Center"
+									Data="M 0 3 L 5 8 L 10 3 Z"
+									Fill="DarkBlue"
+									/>
+							</Grid>
+						</Border>
+						<!--  Gebruik standaard Popup zonder custom styling  -->
+						<Popup x:Name="PART_Popup" IsOpen="{TemplateBinding IsDropDownOpen}">
+							<Border
+								Background="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"
+								BorderBrush="{TemplateBinding BorderBrush}"
+								BorderThickness="1"
+								>
+								<ScrollViewer>
+									<ItemsPresenter />
+								</ScrollViewer>
+							</Border>
+						</Popup>
+					</Grid>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
 
 </ResourceDictionary>
