Implemented Delete Product, if a product excists in orders, projects or storage it will not be realy deleted from the database but the field Hide will get value 1. If it can be deleted also records in the productsupplier table with the same productId will be deleted.
Functionality depends on the excisting of a stored procedure in the MySql database:

```sql
CREATE PROCEDURE modelbuilder.DeleteProductId(
    IN p_ProductId INT,
    OUT result INT
)
BEGIN
    -- Declare variables to store the count of references in other tables
    DECLARE productInUse INT DEFAULT 0;

    -- Check if the ProductId exists in any of the specified tables
    SELECT COUNT(*)
    INTO productInUse
    FROM (
        SELECT product_id FROM supplyorderline WHERE product_id = p_ProductId
        UNION
        SELECT product_id FROM productusage WHERE product_id = p_ProductId
        UNION
        SELECT product_id FROM stock WHERE product_id = p_ProductId
    ) AS temp;

    IF productInUse > 0 THEN
        -- Product is used in at least one of the tables, hide it
        UPDATE Product
        SET Hide = 1
        WHERE Id = p_ProductId;

        -- Return result 1 to indicate the product was hidden
        SET result = 1;
    ELSE
        -- Product is not used, delete from Product table
        DELETE FROM Product
        WHERE Id = p_ProductId;

        -- Delete associated records from productsupplier
        DELETE FROM productsupplier
        WHERE product_id = p_ProductId;

        -- Return result 0 to indicate the product was deleted
        SET result = 0;
    END IF;
END
```

#9

--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -561,6 +561,8 @@
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Label">Categorie</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Tag">Categorie</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Tooltip">Tot welke categorie behoort dit produkt</system:String>
+	<system:String x:Key="Edit.Product.Tab.Statusline.Deleted">is verwijderd</system:String>
+	<system:String x:Key="Edit.Product.Tab.Statusline.Hidden">is verborgen (voor behoud history)</system:String>
 
 	<system:String x:Key="Edit.Product.Tab.General.Group.Inventory.Text">Voorraad gegevens</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.Inventory.MinStock.Label">Minimale voorraad</system:String>
