--- a/Modelbouwer/Resources/Languages/Language.xaml
+++ b/Modelbouwer/Resources/Languages/Language.xaml
@@ -561,6 +561,9 @@
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Label">Categorie</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Tag">Categorie</system:String>
 	<system:String x:Key="Edit.Product.Tab.General.Group.General.Category.Tooltip">Tot welke categorie behoort dit produkt</system:String>
+
+	<system:String x:Key="Edit.Product.Tab.NewProduct.Warning">Let op dit product is nog niet opgeslagen</system:String>
+
 	<system:String x:Key="Edit.Product.Tab.Statusline.Deleted">is verwijderd</system:String>
 	<system:String x:Key="Edit.Product.Tab.Statusline.Hidden">is verborgen (voor behoud history)</system:String>
 
