--- a/Modelbouwer/View/ProductManagement.xaml
+++ b/Modelbouwer/View/ProductManagement.xaml
@@ -17,6 +17,7 @@
 	>
 
 	<Page.Resources>
+		<converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
 		<converter:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
 		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
 		<converter:IndentToPaddingConverter x:Key="IndentToBoolConverter" />
@@ -78,7 +79,7 @@
 						Style="{DynamicResource DefaultToolBarTray}"
 						>
 						<ToolBar x:Name="generalToolbar" Style="{DynamicResource DefaultToolBar}">
-							<Button Click="ButtonNew" ToolTip="{StaticResource Edit.Product.Action.Tooltip.Add}"> 
+							<Button Click="ButtonNew" ToolTip="{StaticResource Edit.Product.Action.Tooltip.Add}">
 								<Image Style="{DynamicResource ToolBarAddIcon}" />
 							</Button>
 							<Button Click="ButtonDelete" ToolTip="{StaticResource Edit.Product.Action.Tooltip.Delete}">
@@ -164,6 +165,7 @@
 								<RowDefinition Height="190" />
 								<RowDefinition Height="140" />
 								<RowDefinition Height="90" />
+								<RowDefinition Height="*" />
 							</Grid.RowDefinitions>
 							<Grid.ColumnDefinitions>
 								<ColumnDefinition Width="2.5*" />
@@ -548,7 +550,7 @@
 
 							<!--#region Project information-->
 							<GroupBox
-								Grid.Row="3"
+								Grid.Row="2"
 								Margin="2,2"
 								Opacity="1"
 								>
@@ -618,6 +620,22 @@
 								</Grid>
 							</GroupBox>
 							<!--#endregion-->
+
+							<TextBox
+								Grid.Row="3"
+								Width="AUTO"
+								Height="25"
+								Margin="0,10"
+								Padding="15,0"
+								HorizontalAlignment="Center"
+								VerticalAlignment="Top"
+								VerticalContentAlignment="Center"
+								Background="Red"
+								FontWeight="Bold"
+								Foreground="Yellow"
+								Text="{StaticResource Edit.Product.Tab.NewProduct.Warning}"
+								Visibility="{Binding ProductViewModel.IsAddingNew, Converter={StaticResource BooleanToVisibilityConverter}}"
+								/>
 							<!--#endregion-->
 						</Grid>
 					</TabItem>
@@ -1082,7 +1100,11 @@
 					<!--#endregion-->
 
 					<!--#region Inventory information tab-->
-					<TabItem Header="{StaticResource Edit.Product.Tab.Inventory.Label}" Style="{DynamicResource Default TabItem}" />
+					<TabItem
+						x:Name="InventoryTab"
+						Header="{StaticResource Edit.Product.Tab.Inventory.Label}"
+						Style="{DynamicResource Default TabItem}"
+						/>
 					<!--#endregion-->
 				</TabControl>
 				<!--#endregion-->
