Started implementation Project Maintanace Page #12

--- a/Modelbouwer/App.xaml
+++ b/Modelbouwer/App.xaml
@@ -18,6 +18,7 @@
 				<ResourceDictionary Source="Resources/Styles/Label.xaml" />
 				<ResourceDictionary Source="Resources/Styles/TextBlock.xaml" />
 				<ResourceDictionary Source="Resources/Styles/TextBox.xaml" />
+				<ResourceDictionary Source="Resources/Styles/ToggleButton.xaml" />
 				<ResourceDictionary Source="Resources/Styles/TreeView.xaml" />
 				<ResourceDictionary Source="Resources/Styles/XMLValues.xaml" />
 				<ResourceDictionary Source="Resources/Themes/DefaultColors.xaml" />
