--- a/Modelbouwer/Resources/Styles/General.xaml
+++ b/Modelbouwer/Resources/Styles/General.xaml
@@ -694,6 +694,86 @@
 	</Style>
 	<!--#endregion-->
 
+	<!--#region ToggleButton Textbox, with rounded corners-->
+	<Style x:Key="DisabledTextBox" TargetType="TextBox">
+		<Setter Property="AllowDrop" Value="true" />
+		<Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
+		<Setter Property="BorderBrush" Value="{DynamicResource TextBox.Static.Border}" />
+		<Setter Property="BorderThickness" Value="1" />
+		<Setter Property="FocusVisualStyle" Value="{x:Null}" />
+		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="Height" Value="24" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="HorizontalContentAlignment" Value="Left" />
+		<Setter Property="IsEnabled" Value="False" />
+		<Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
+		<Setter Property="Padding" Value="1,0" />
+		<Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst" />
+		<Setter Property="Stylus.IsFlicksEnabled" Value="False" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type TextBox}">
+					<Border
+						x:Name="border"
+						Background="{TemplateBinding Background}"
+						BorderBrush="{TemplateBinding BorderBrush}"
+						BorderThickness="{TemplateBinding BorderThickness}"
+						CornerRadius="5"
+						SnapsToDevicePixels="True"
+						>
+						<Grid Margin="{TemplateBinding Padding}">
+							<ScrollViewer
+								x:Name="PART_ContentHost"
+								Focusable="False"
+								HorizontalScrollBarVisibility="Hidden"
+								VerticalScrollBarVisibility="Hidden"
+								/>
+							<Label
+								x:Name="WaterMarkLabel"
+								Padding="{TemplateBinding Padding}"
+								HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+								VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+								Content="{TemplateBinding Tag}"
+								FontStyle="Italic"
+								FontWeight="{TemplateBinding FontWeight}"
+								Foreground="{DynamicResource SecondaryGrayColor}"
+								Visibility="Collapsed"
+								/>
+						</Grid>
+					</Border>
+					<ControlTemplate.Triggers>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="Text" Value="" />
+							</MultiTrigger.Conditions>
+							<Setter TargetName="WaterMarkLabel" Property="Visibility" Value="Visible" />
+						</MultiTrigger>
+
+						<Trigger Property="IsMouseOver" Value="true">
+							<Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource TextBox.MouseOver.Border}" />
+						</Trigger>
+
+						<Trigger Property="IsKeyboardFocused" Value="true">
+							<Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource TextBox.Focus.Border}" />
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+
+		<Style.Triggers>
+			<MultiTrigger>
+				<MultiTrigger.Conditions>
+					<Condition Property="IsInactiveSelectionHighlightEnabled" Value="true" />
+					<Condition Property="IsSelectionActive" Value="false" />
+				</MultiTrigger.Conditions>
+				<Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}" />
+			</MultiTrigger>
+		</Style.Triggers>
+	</Style>
+	<!--#endregion-->
+
 	<!--#region Syncfusion: DoubleTextBox-->
 	<Style x:Key="SyncfusionDoubleTextBox" TargetType="skin:DoubleTextBox">
 		<Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}" />
