--- a/Modelbouwer/View/ProjectManagement.xaml
+++ b/Modelbouwer/View/ProjectManagement.xaml
@@ -2,15 +2,34 @@
 	x:Class="Modelbouwer.View.ProjectManagement"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:Engine="clr-namespace:Syncfusion.UI.Xaml.TreeView.Engine;assembly=Syncfusion.SfTreeView.WPF"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
 	Title="ProjectManagement"
+	d:DataContext="{d:DesignInstance Type=viewmodels:CombinedProjectViewModel}"
 	d:DesignHeight="1080"
-	d:DesignWidth="1920"
+	d:DesignWidth="1450"
 	mc:Ignorable="d"
 	>
+
+	<Page.Resources>
+		<converter:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+		<converter:StringToVisibilityConverter x:Key="StringToVisibilityConverter" />
+		<converter:IntToBoolConverter x:Key="IntToBoolConverter" />
+		<converter:IndentToPaddingConverter x:Key="IndentToBoolConverter" />
+		<converter:ByteToImageConverter x:Key="ByteToImageConverter" />
+		<converter:ByteToImageConverter x:Key="NullOrEmptyImageConverter" />
+		<converter:TotalTimeConverter x:Key="TotalTimeConverter" />
+		<converter:DecimalConverter x:Key="DecimalConverter" />
+	</Page.Resources>
+
+	<Page.DataContext>
+		<viewmodels:CombinedProjectViewModel />
+	</Page.DataContext>
 
 	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
 		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
@@ -62,6 +81,7 @@
 					<Grid>
 						<Grid.ColumnDefinitions>
 							<ColumnDefinition Width="1170" />
+							<ColumnDefinition Width="270" />
 							<ColumnDefinition Width="*" />
 						</Grid.ColumnDefinitions>
 
@@ -111,6 +131,7 @@
 										CharacterCasing="Upper"
 										Style="{DynamicResource DefaultTextBox}"
 										Tag="{StaticResource Edit.Project.Tab.General.Group.Details.Code.Tag}"
+										Text="{Binding ProjectViewModel.SelectedProject.ProjectCode}"
 										ToolTip="{StaticResource Edit.Project.Tab.General.Group.Details.Code.Tooltip}"
 										/>
 									<TextBox
@@ -122,6 +143,7 @@
 										CharacterCasing="Upper"
 										Style="{DynamicResource DefaultTextBox}"
 										Tag="{StaticResource Edit.Project.Tab.General.Group.Details.Description.Tag}"
+										Text="{Binding ProjectViewModel.SelectedProject.ProjectName}"
 										ToolTip="{StaticResource Edit.Project.Tab.General.Group.Details.Description.Tooltip}"
 										/>
 
@@ -158,6 +180,7 @@
 										HorizontalAlignment="Left"
 										Style="{DynamicResource DefaultDataPicker}"
 										Tag="{StaticResource Edit.Project.Tab.General.Group.Details.Startdate.Tag}"
+										Text="{Binding ProjectViewModel.SelectedProject.ProjectStartDate}"
 										ToolTip="{StaticResource Edit.Project.Tab.General.Group.Details.Startdate.Tooltip}"
 										/>
 
@@ -168,6 +191,7 @@
 										Width="150"
 										HorizontalAlignment="Left"
 										Style="{DynamicResource HideOnShowDataPicker}"
+										Text="{Binding ProjectViewModel.SelectedProject.ProjectEndDate}"
 										/>
 									<TextBox
 										x:Name="ProjectExpEnddate"
@@ -177,6 +201,7 @@
 										HorizontalAlignment="Left"
 										Style="{DynamicResource HideOnNotShowTextBox}"
 										Tag="{StaticResource Edit.Project.Tab.General.Group.Details.ExpectedEnddate.Tag}"
+										Text="{Binding ProjectViewModel.SelectedProject.ProjectExpectedWorkdays}"
 										ToolTip="{StaticResource Edit.Project.Tab.General.Group.Details.ExpectedEnddate.Tooltip}"
 										/>
 									<ToggleButton
@@ -186,8 +211,11 @@
 										HorizontalAlignment="Left"
 										VerticalAlignment="Center"
 										BorderBrush="White"
+										Checked="ProjectStatus"
 										Click="ProjectStatus"
+										IsChecked="{Binding ProjectViewModel.SelectedProject.ProjectClosed}"
 										Style="{StaticResource SwitchButton}"
+										Unchecked="ProjectStatus"
 										/>
 								</Grid>
 							</GroupBox>
@@ -203,6 +231,7 @@
 									</GroupBox.Header>
 
 									<StackPanel Orientation="Horizontal">
+										<!--#region Build time-->
 										<GroupBox Width="480" Opacity="1">
 											<GroupBox.Header>
 												<TextBlock Style="{DynamicResource TextBlockBold}" Text="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Text}" />
@@ -241,6 +270,7 @@
 													IsEnabled="False"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Construction.Short.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectTotalTimeInHours, Converter={StaticResource DecimalConverter}}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Construction.Short.Tooltip}"
 													/>
 
@@ -255,6 +285,7 @@
 													HorizontalContentAlignment="Left"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Construction.Long.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectTotalTimeInHours, Converter={StaticResource TotalTimeConverter}}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Construction.Long.Tooltip}"
 													/>
 												<!--#endregion-->
@@ -278,6 +309,7 @@
 													HorizontalContentAlignment="Right"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Businessdays.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectBuildDays}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Businessdays.Tooltip}"
 													/>
 												<!--#endregion-->
@@ -301,6 +333,7 @@
 													HorizontalContentAlignment="Right"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.ShortestDay.Date.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectShortestWorkday}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.ShortestDay.Date.Tooltip}"
 													/>
 
@@ -315,6 +348,7 @@
 													HorizontalContentAlignment="Left"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.ShortestDay.Time.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectShortestWorkdayHours, Converter={StaticResource TotalTimeConverter}}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.ShortestDay.Time.Tooltip}"
 													/>
 												<!--#endregion-->
@@ -338,6 +372,7 @@
 													HorizontalContentAlignment="Right"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.LongestDay.Date.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectLongestWorkday}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.LongestDay.Date.Tooltip}"
 													/>
 
@@ -352,6 +387,7 @@
 													HorizontalContentAlignment="Left"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.LongestDay.Time.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectLongestWorkdayHours, Converter={StaticResource TotalTimeConverter}}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.LongestDay.Time.Tooltip}"
 													/>
 												<!--#endregion-->
@@ -375,14 +411,28 @@
 													HorizontalContentAlignment="Right"
 													Style="{StaticResource DisabledTextBox}"
 													Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Average.Tag}"
+													Text="{Binding ProjectViewModel.SelectedProject.ProjectAverageHoursPerDay}"
 													ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Progress.Average.Tooltip}"
 													/>
 												<!--#endregion-->
 											</Grid>
 										</GroupBox>
+										<!--#endregion-->
 
 										<!--#region The Future-->
-										<StackPanel Orientation="Vertical">
+										<StackPanel Orientation="Vertical" >
+											<!--#region Hide StackPanel when project is completed-->
+											<StackPanel.Style>
+												<Style TargetType="StackPanel">
+													<Style.Triggers>
+														<DataTrigger Binding="{Binding ProjectViewModel.SelectedProject.ProjectClosed}" Value="True">
+															<Setter Property="Visibility" Value="Collapsed"/>
+														</DataTrigger>
+													</Style.Triggers>
+												</Style>
+											</StackPanel.Style>
+											<!--#endregion-->
+											
 											<!--#region Expectations-->
 											<GroupBox Width="430" Opacity="1">
 												<GroupBox.Header>
@@ -416,7 +466,7 @@
 														HorizontalAlignment="Right"
 														VerticalAlignment="Center"
 														HorizontalContentAlignment="Right"
-														Style="{StaticResource DefaultTextBox}"
+														Style="{StaticResource DefaultTextBox}" Text="{Binding ProjectViewModel.SelectedProject.ProjectExpectedTime, Converter={StaticResource TotalTimeConverter}}"
 														Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Expecation.Time.Tag}"
 														ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Expecation.Time.Tooltip}"
 														/>
@@ -448,6 +498,7 @@
 														HorizontalContentAlignment="Right"
 														Style="{StaticResource DisabledTextBox}"
 														Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Tag}"
+														Text="{Binding ProjectViewModel.SelectedProject.ProjectExpectedWorkdays}"
 														ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Tooltip}"
 														/>
 
@@ -462,6 +513,7 @@
 														HorizontalContentAlignment="Left"
 														Style="{StaticResource DisabledTextBox}"
 														Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Long.Tag}"
+														Text="{Binding ProjectViewModel.SelectedProject.ProjectExpectedWorkdays, Converter={StaticResource TotalTimeConverter}}"
 														ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Long.Tooltip}"
 														/>
 													<!--#endregion-->
@@ -505,6 +557,7 @@
 														HorizontalContentAlignment="Right"
 														Style="{StaticResource DefaultTextBox}"
 														Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Togo.Hours.Tag}"
+														Text="{Binding ProjectViewModel.SelectedProject.ProjectTodoTime, Converter={StaticResource TotalTimeConverter}}"
 														ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Togo.Hours.Tooltip}"
 														/>
 													<!--#endregion-->
@@ -529,6 +582,7 @@
 														HorizontalContentAlignment="Left"
 														Style="{StaticResource DisabledTextBox}"
 														Tag="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Long.Tag}"
+														Text="{Binding ProjectViewModel.SelectedProject.ProjectTodoTime, Converter={StaticResource TotalTimeConverter}}"
 														ToolTip="{StaticResource Edit.Project.Tab.General.Group.Time.Expectation.Businessdays.Long.Tooltip}"
 														/>
 													<!--#endregion-->
@@ -700,35 +754,57 @@
 						<StackPanel
 							Grid.Column="1"
 							Margin="8,5"
-							HorizontalAlignment="Left"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Center"
 							Orientation="Vertical"
 							>
 
-							<Border Width="240"
-                                    Height="240"
-                                    Margin="3"
-                                    Style="{DynamicResource ImageBorder}">
-								<Image x:Name="ProjectImage"
-                                       Source="{StaticResource noimage}"
-                                       Style="{DynamicResource ProductImage}" />
+							<Border
+								Width="250"
+								Height="250"
+								Margin="2"
+								BorderThickness="2"
+								Style="{DynamicResource ImageBorder}"
+								>
+								<Border.BorderBrush>
+									<LinearGradientBrush MappingMode="Absolute" SpreadMethod="Reflect" StartPoint="0.5,0" EndPoint="0.5,1">
+										<GradientStop Offset="1" Color="#FFB4BCED" />
+										<GradientStop Offset="0" Color="#FF293475" />
+										<GradientStop Offset="1" Color="#FF9BA3D7" />
+									</LinearGradientBrush>
+								</Border.BorderBrush>
+								<Image
+									x:Name="ProjectImage"
+									HorizontalAlignment="Center"
+									VerticalAlignment="Center"
+									Source="{StaticResource noimage}"
+									Stretch="Uniform"
+									Style="{DynamicResource ProductImage}"
+									/>
 							</Border>
 
-							<ToolBarTray Style="{DynamicResource ImageToolBarTray}">
+							<ToolBarTray HorizontalAlignment="Center" Style="{DynamicResource ImageToolBarTray}">
 								<ToolBar Style="{DynamicResource ImageToolBar}">
-									<Button VerticalAlignment="Top"
-                                            Click="ImageAdd"
-                                            ToolTip="{StaticResource ToolBar.Button.Image.Add.Label}">
+									<Button
+										VerticalAlignment="Top"
+										Click="ImageAdd"
+										ToolTip="{StaticResource ToolBar.Button.Image.Add.Label}"
+										>
 										<Image Style="{DynamicResource ToolBarAddIcon}" />
 									</Button>
-									<Button VerticalAlignment="Top"
-                                            Click="ImageDelete"
-                                            ToolTip="{StaticResource ToolBar.Button.Image.Remove.Label}">
+									<Button
+										VerticalAlignment="Top"
+										Click="ImageDelete"
+										ToolTip="{StaticResource ToolBar.Button.Image.Remove.Label}"
+										>
 										<Image Style="{DynamicResource ToolBarDeleteIcon}" />
 									</Button>
 									<Separator Style="{DynamicResource ImageToolBarSeperator}" />
-									<Button VerticalAlignment="Top"
-                                            Click="ImageRotate"
-                                            ToolTip="{StaticResource ToolBar.Button.Image.Rotate.Label}">
+									<Button
+										VerticalAlignment="Top"
+										Click="ImageRotate"
+										ToolTip="{StaticResource ToolBar.Button.Image.Rotate.Label}"
+										>
 										<Image Style="{DynamicResource ToolBarRotateIcon}" />
 									</Button>
 								</ToolBar>
@@ -750,6 +826,73 @@
 				<TabItem Header="{StaticResource Edit.Project.Tab.BuildCosts.Label}" Style="{DynamicResource Default TabItem}" />
 				<!--#endregion-->
 			</TabControl>
+			<!--#endregion-->
+
+			<!--#region DataGrid-->
+			<syncfusion:SfDataGrid
+				x:Name="dataGrid"
+				Grid.Row="2"
+				Margin="10,5"
+				d:ItemsSource="{d:SampleData}"
+				AllowDeleting="False"
+				AllowEditing="False"
+				AllowFiltering="True"
+				AllowGrouping="True"
+				AllowResizingColumns="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				FilterRowPosition="Top"
+				ItemsSource="{Binding ProjectViewModel.Project, Mode=TwoWay}"
+				Loaded="ProjectDataGridLoaded"
+				SelectedIndex="0"
+				SelectedItem="{Binding ProjectViewModel.SelectedProject, Mode=TwoWay}"
+				SelectionChanged="ChangedProject"
+				SortClickAction="DoubleClick"
+				>
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.Project.DataGrid.Header.Id}"
+						HorizontalHeaderContentAlignment="Left"
+						IsHidden="True"
+						MappingName="ProjectId"
+						/>
+					<syncfusion:GridTextColumn
+						Width="150"
+						AllowFiltering="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Project.DataGrid.Header.Code}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProjectCode"
+						/>
+					<syncfusion:GridTextColumn
+						AllowFiltering="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Project.DataGrid.Header.Name}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProjectName"
+						/>
+					<syncfusion:GridTextColumn
+						Width="120"
+						AllowFiltering="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Project.DataGrid.Header.StartDate}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProjectStartDate"
+						/>
+					<syncfusion:GridCheckBoxColumn
+						Width="100"
+						AllowFiltering="True"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Project.DataGrid.Header.Completed}"
+						HorizontalHeaderContentAlignment="Center"
+						MappingName="ProjectClosed"
+						/>
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+
+			<!--#region Status bar-->
+
 			<!--#endregion-->
 
 		</Grid>
